--- a/style.css
+++ b/style.css
@@ -74,7 +74,7 @@ input:focus {
   margin-right: auto; 
   width: 75%;
   top: 18%;
-  height: 100px;
+  min-height: 100px;
 }
 
 .searchResults span {
@@ -93,6 +93,7 @@ input:focus {
   display: flex;
   flex-direction: column;
   gap: 10px;
+  padding: 7px;
 }
 
 .containerMap {
